--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
   <body>
     <main>
       <div id="sketch-container"></div>
+      <div id="text">
+        <h1>Reflection and data</h1>
+      </div>
     </main>
-    <script src="javascript/sketch.js"></script>
+     <script src="javascript/sketch.js"></script> 
   </body>
 </html>
